[package]
name = "chronostream"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "2.0.10"
borsh = "1.5.1"
borsh-derive = "1.5.1"
thiserror = "1.0.50"

[dev-dependencies]
solana-program-test = "2.0.10"
solana-sdk = "2.0.10"

[lib]
name = "chronostream"
crate-type = ["cdylib", "lib"]